--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "php":                ">=5.3.0",
         "illuminate/support": "4.2.*"
     },
+    "suggest": {
+        "vi-kon/laravel-smarty-view": "Smarty template engine for Laravel 4"
+    },
     "autoload":          {
         "psr-0": {
             "ViKon\\Utilities\\": "src/"
