--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require":           {
         "php":                ">=5.3.0",
-        "illuminate/support": "4.2.*"
+        "illuminate/support": "~5.0"
     },
     "suggest": {
         "vi-kon/laravel-smarty-view": "Smarty template engine for Laravel 4"
