--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
     "autoload":          {
         "psr-0": {
             "ViKon\\Utilities\\": "src/"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "minimum-stability": "stable"
 }
