--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   ],
   "require"          : {
     "php"               : ">=5.3.0",
-    "illuminate/support": "~5.0"
+    "illuminate/support": "~5.0",
+    "symfony/console"   : "^2.6"
   },
   "suggest"          : {
     "vi-kon/laravel-smarty-view": "Smarty template engine for Laravel 5"
